--- a/packages/icons/styles/base.scss
+++ b/packages/icons/styles/base.scss
@@ -5,7 +5,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   background: $color-background;
   color: $color-text;
   height: 100%;
