--- a/packages/icons/styles/icons.scss
+++ b/packages/icons/styles/icons.scss
@@ -15,7 +15,8 @@
     }
   }
 
-  &__list, &__list-item {
+  &__list,
+  &__list-item {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -25,5 +26,4 @@
     display: inline-block;
     padding: 0.5rem 1rem 0.5rem 0;
   }
-
 }
