--- a/website/styles/base.scss
+++ b/website/styles/base.scss
@@ -9,7 +9,9 @@ body {
 }
 
 body {
-  background: $color-background url('/_backgrounds/_raw/space-01.jpg') no-repeat
+  background:
+    $color-background url('/_backgrounds/_raw/space-01.jpg')
+    no-repeat
     fixed;
   background-blend-mode: overlay;
   background-size: cover;
