--- a/website/styles/base.scss
+++ b/website/styles/base.scss
@@ -9,7 +9,7 @@ body {
 }
 
 body {
-  background: $seti-background url('/_backgrounds/_raw/space-01.jpg') no-repeat fixed;
+  background: $color-background url('/_backgrounds/_raw/space-01.jpg') no-repeat fixed;
   background-blend-mode: overlay;
   background-size: cover;
   min-height: 100vh;
