--- a/website/styles/components/colors.scss
+++ b/website/styles/components/colors.scss
@@ -20,7 +20,7 @@
   }
 
   .color-card-wrapper {
-    margin: 0rem 1rem 1rem 0rem;
+    margin: 0 1rem 1rem 0;
 
     .color-card {
       cursor: pointer;
